# rag

./: .gitignore  README.md
finance_multi_modal_rag/: README.md  pyproject.toml  test.py
finance_multi_modal_rag/finance_multi_modal_rag/: chunking.py  data_loading.py  embedding.py  llm_wrapper.py  response_generation.py  retrieval.py  utils.py
rag-tutor/: rough.ipynb
rag-tutor/data/: arxiv_sources.txt  blog_sources.txt  repos.jsonl
rag-tutor/src/pipeline/: generation.py
rag-tutor/src/retrieval/: docstore.py  models.py  utils.py
rag-tutor/src/retrieval/chunker/: __init__.py  code_chunker.py  md_chunker.py
rag-tutor/src/retrieval/scraper/: arxiv.py  blog.py  github.py
